@@ -23,66 +23,122 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
  */
 
-var count = output.length;
+var count1 = output1.length;
+var count2 = output2.length;
 
-var itemTotals = {};
-itemTotals.length = count;
+var itemTotals1 = {};
+itemTotals1.length = count1;
 
-var total = 0;
-var categoryTotals = {};
-var testTotalsByCategory = {};
+var total1 = 0;
+var categoryTotals1 = {};
+var testTotalsByCategory1 = {};
 
-var mean = 0;
-var categoryMeans = {};
-var testMeansByCategory = {};
+var mean1 = 0;
+var categoryMeans1 = {};
+var testMeansByCategory1 = {};
 
-var stdDev = 0;
-var categoryStdDevs = {};
-var testStdDevsByCategory = {};
+var stdDev1 = 0;
+var categoryStdDevs1 = {};
+var testStdDevsByCategory1 = {};
 
-var stdErr = 0;
-var categoryStdErrs = {};
-var testStdErrsByCategory = {};
+var stdErr1 = 0;
+var categoryStdErrs1 = {};
+var testStdErrsByCategory1 = {};
+
+var itemTotals2 = {};
+itemTotals2.length = count2;
+
+var total2 = 0;
+var categoryTotals2 = {};
+var testTotalsByCategory2 = {};
+
+var mean2 = 0;
+var categoryMeans2 = {};
+var testMeansByCategory2 = {};
+
+var stdDev2 = 0;
+var categoryStdDevs2 = {};
+var testStdDevsByCategory2 = {};
+
+var stdErr2 = 0;
+var categoryStdErrs2 = {};
+var testStdErrsByCategory2 = {};
 
 function initialize()
 {
-    itemTotals = {total: []};
+    itemTotals1 = {total: []};
 
     for (var i = 0; i < categories.length; i++) {
         var category = categories[i];
-        itemTotals[category] = [];
-        categoryTotals[category] = 0;
-        testTotalsByCategory[category] = {};
-        categoryMeans[category] = 0;
-        testMeansByCategory[category] = {};
-        categoryStdDevs[category] = 0;
-        testStdDevsByCategory[category] = {};
-        categoryStdErrs[category] = 0;
-        testStdErrsByCategory[category] = {};
+        itemTotals1[category] = [];
+        categoryTotals1[category] = 0;
+        testTotalsByCategory1[category] = {};
+        categoryMeans1[category] = 0;
+        testMeansByCategory1[category] = {};
+        categoryStdDevs1[category] = 0;
+        testStdDevsByCategory1[category] = {};
+        categoryStdErrs1[category] = 0;
+        testStdErrsByCategory1[category] = {};
     }
 
     for (var i = 0; i < tests.length; i++) {
         var test = tests[i];
-        itemTotals[test] = [];
+        itemTotals1[test] = [];
         var category = test.replace(/-.*/, "");
-        testTotalsByCategory[category][test] = 0;
-        testMeansByCategory[category][test] = 0;
-        testStdDevsByCategory[category][test] = 0;
-        testStdErrsByCategory[category][test] = 0;
+        testTotalsByCategory1[category][test] = 0;
+        testMeansByCategory1[category][test] = 0;
+        testStdDevsByCategory1[category][test] = 0;
+        testStdErrsByCategory1[category][test] = 0;
     }
 
-    for (var i = 0; i < count; i++) {
-        itemTotals["total"][i] = 0;
-        for (var category in categoryTotals) {
-            itemTotals[category][i] = 0;
-            for (var test in testTotalsByCategory[category]) {
-                itemTotals[test][i] = 0;
+    for (var i = 0; i < count1; i++) {
+        itemTotals1["total"][i] = 0;
+        for (var category in categoryTotals1) {
+            itemTotals1[category][i] = 0;
+            for (var test in testTotalsByCategory1[category]) {
+                itemTotals1[test][i] = 0;
             }
         }
     }
+
+    itemTotals2 = {total: []};
+
+    for (var i = 0; i < categories.length; i++) {
+        var category = categories[i];
+        itemTotals2[category] = [];
+        categoryTotals2[category] = 0;
+        testTotalsByCategory2[category] = {};
+        categoryMeans2[category] = 0;
+        testMeansByCategory2[category] = {};
+        categoryStdDevs2[category] = 0;
+        testStdDevsByCategory2[category] = {};
+        categoryStdErrs2[category] = 0;
+        testStdErrsByCategory2[category] = {};
+    }
+
+    for (var i = 0; i < tests.length; i++) {
+        var test = tests[i];
+        itemTotals2[test] = [];
+        var category = test.replace(/-.*/, "");
+        testTotalsByCategory2[category][test] = 0;
+        testMeansByCategory2[category][test] = 0;
+        testStdDevsByCategory2[category][test] = 0;
+        testStdErrsByCategory2[category][test] = 0;
+    }
+
+    for (var i = 0; i < count2; i++) {
+        itemTotals2["total"][i] = 0;
+        for (var category in categoryTotals2) {
+            itemTotals2[category][i] = 0;
+            for (var test in testTotalsByCategory2[category]) {
+                itemTotals2[test][i] = 0;
+            }
+        }
+    }
+
 }
 
-function computeItemTotals()
+function computeItemTotals(output, itemTotals)
 {
     for (var i = 0; i < output.length; i++) {
         var result = output[i];
@@ -96,8 +152,10 @@ function computeItemTotals()
     }
 }
 
-function computeTotals()
+function computeTotals(output, categoryTotals, testTotalsByCategory)
 {
+    var total = 0;
+
     for (var i = 0; i < output.length; i++) {
         var result = output[i];
         for (var test in result) {
@@ -108,17 +166,20 @@ function computeTotals()
             testTotalsByCategory[category][test] += time;
         }
     }
+
+    return total;
 }
 
-function computeMeans()
+function computeMeans(count, total, categoryTotals, categoryMeans, testTotalsByCategory, testMeansByCategory)
 {
-    mean = total / count;
+    var mean = total / count;
     for (var category in categoryTotals) {
         categoryMeans[category] = categoryTotals[category] / count;
         for (var test in testTotalsByCategory[category]) {
             testMeansByCategory[category][test] = testTotalsByCategory[category][test] / count;
         }
     }
+    return mean;
 }
 
 function standardDeviation(mean, items)
@@ -132,9 +193,9 @@ function standardDeviation(mean, items)
     return Math.sqrt(variance);
 }
 
-function computeStdDevs()
+function computeStdDevs(mean, itemTotals, categoryStdDevs, categoryMeans, testStdDevsByCategory, testMeansByCategory)
 {
-    stdDev = standardDeviation(mean, itemTotals["total"]);
+    var stdDev = standardDeviation(mean, itemTotals["total"]);
     for (var category in categoryStdDevs) {
         categoryStdDevs[category] = standardDeviation(categoryMeans[category], itemTotals[category]);
     }
@@ -143,13 +204,14 @@ function computeStdDevs()
             testStdDevsByCategory[category][test] = standardDeviation(testMeansByCategory[category][test], itemTotals[test]);
         }
     }
+    return stdDev;
 }
 
-function computeStdErrors()
+function computeStdErrors(count, stdDev, categoryStdErrs, categoryStdDevs, testStdErrsByCategory, testStdDevsByCategory)
 {
     var sqrtCount = Math.sqrt(count);
-
-    stdErr = stdDev / sqrtCount;
+    
+    var stdErr = stdDev / sqrtCount;
     for (var category in categoryStdErrs) {
         categoryStdErrs[category] = categoryStdDevs[category] / sqrtCount;
     }
@@ -159,6 +221,7 @@ function computeStdErrors()
         }
     }
 
+    return stdErr;
 }
 
 var tDistribution = [NaN, NaN, 12.71, 4.30, 3.18, 2.78, 2.57, 2.45, 2.36, 2.31, 2.26, 2.23, 2.20, 2.18, 2.16, 2.14, 2.13, 2.12, 2.11, 2.10, 2.09, 2.09, 2.08, 2.07, 2.07, 2.06, 2.06, 2.06, 2.05, 2.05, 2.05, 2.04, 2.04, 2.04, 2.03, 2.03, 2.03, 2.03, 2.03, 2.02, 2.02, 2.02, 2.02, 2.02, 2.02, 2.02, 2.01, 2.01, 2.01, 2.01, 2.01, 2.01, 2.01, 2.01, 2.01, 2.00, 2.00, 2.00, 2.00, 2.00, 2.00, 2.00, 2.00, 2.00, 2.00, 2.00, 2.00, 2.00, 2.00, 2.00, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.99, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.98, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.97, 1.96];
@@ -173,20 +236,22 @@ function tDist(n)
 }
 
 
-function formatResult(meanWidth, mean, stdErr, n)
+function formatMean(meanWidth, mean, stdErr, count)
 {
     var meanString = mean.toFixed(1).toString();
     while (meanString.length < meanWidth) {
         meanString = " " + meanString;
     }
 
-    return meanString + "ms +/- " + ((tDist(n) * stdErr / mean) * 100).toFixed(1) + "%";
+    var error = "+/- " + ((tDist(count) * stdErr / mean) * 100).toFixed(1) + "% ";
+
+    return meanString + "ms " + error;
 }
 
 function computeLabelWidth()
 {
     var width = "Total".length;
-    for (var category in categoryMeans) {
+    for (var category in categoryMeans1) {
         if (category.length + 2 > width)
             width = category.length + 2;
     }
@@ -199,15 +264,15 @@ function computeLabelWidth()
     return width;
 }
 
-function computeMeanWidth()
+function computeMeanWidth(mean, categoryMeans, testMeansByCategory)
 {
     var width = mean.toFixed(1).toString().length;
     for (var category in categoryMeans) {
-        var candidate = categoryMeans[category].toFixed(2).toString().length;
+        var candidate = categoryMeans[category].toFixed(1).toString().length;
         if (candidate > width)
             width = candidate;
         for (var test in testMeansByCategory[category]) {
-            var candidate = testMeansByCategory[category][test].toFixed(2).toString().length;
+            var candidate = testMeansByCategory[category][test].toFixed(1).toString().length;
             if (candidate > width)
                 width = candidate;
         }
@@ -216,47 +281,95 @@ function computeMeanWidth()
     return width;
 }
 
-function resultLine(labelWidth, indent, label, meanWidth, mean, stdErr)
+function pad(str, n)
 {
-    var result = "";
-    for (i = 0; i < indent; i++) {
-        result += " ";
+    while (str.length < n) {
+        str += " ";
     }
-    
-    result += label + ": ";
+    return str;
+}
 
-    for (i = 0; i < (labelWidth - (label.length + indent)); i++) {
-        result += " ";
+function resultLine(labelWidth, indent, label, meanWidth1, mean1, stdErr1, meanWidth2, mean2, stdErr2)
+{
+    result = pad("", indent);    
+    result += label + ": ";
+    result = pad(result, labelWidth + 2);
+
+    var t = (mean1 - mean2) / (Math.sqrt((stdErr1 * stdErr1) + (stdErr1 * stdErr2))); 
+    var df = count1 + count2 - 2;
+
+    var statisticallySignificant = (Math.abs(t) > tDist(df+1));
+    var diff = mean2 - mean1;
+    var percentage = 100 * diff / mean1;
+    var isFaster = diff < 0;
+    var probablySame = (percentage < 0.1) && !statisticallySignificant;
+
+    var diffSummary;
+    var diffDetail;
+
+    if (probablySame) {
+        diffSummary = "-";
+        diffDetail = "";
+    } else if (!statisticallySignificant) {
+        diffSummary = "??";
+        diffDetail =  "    not conclusive: might be " + Math.abs(percentage).toFixed(1).toString() + "% ";
+        diffDetail += (isFaster ? "faster" : "*slower*");
+    } else {
+        diffSummary = Math.abs(percentage).toFixed(1).toString() + "% " + (isFaster ? "faster" : "*slower*");
+        diffDetail = "    significant"; 
     }
-    
-    return result + formatResult(meanWidth, mean, stdErr, count);
+
+    return result + pad(diffSummary, 16) + formatMean(meanWidth1, mean1, stdErr1, count1) + "  " + formatMean(meanWidth2, mean2, stdErr2, count2) + diffDetail;
 }
 
 function printOutput()
 {
     var labelWidth = computeLabelWidth();
-    var meanWidth = computeMeanWidth();
+    var meanWidth1 = computeMeanWidth(mean1, categoryMeans1, testMeansByCategory1);
+    var meanWidth2 = computeMeanWidth(mean2, categoryMeans2, testMeansByCategory2);
 
     print("\n");
-    print("========================================");
-    print("RESULTS (means and 95% confidence intervals)");
-    print("----------------------------------------");
-    print(resultLine(labelWidth, 0, "Total", meanWidth, mean, stdErr));
-    print("----------------------------------------");
-    for (var category in categoryMeans) {
+    var header = "TEST";
+    while (header.length < labelWidth)
+        header += " ";
+    header += "  COMPARISON            FROM                 TO             DETAILS";
+    print(header);
+    print("");
+    print("=============================================================================");
+    print("");
+    print(resultLine(labelWidth, 0, "** TOTAL **", meanWidth1, mean1, stdErr1, meanWidth2, mean2, stdErr2));
+    print("");
+    print("=============================================================================");
+
+    for (var category in categoryMeans1) {
         print("");
-        print(resultLine(labelWidth, 2, category, meanWidth, categoryMeans[category], categoryStdErrs[category]));
-        for (var test in testMeansByCategory[category]) {
+        print(resultLine(labelWidth, 2, category,
+                         meanWidth1, categoryMeans1[category], categoryStdErrs1[category],
+                         meanWidth2, categoryMeans2[category], categoryStdErrs2[category]));
+        for (var test in testMeansByCategory1[category]) {
             var shortName = test.replace(/^[^-]*-/, "");
-            print(resultLine(labelWidth, 4, shortName, meanWidth, testMeansByCategory[category][test], testStdErrsByCategory[category][test]));
+            print(resultLine(labelWidth, 4, shortName, 
+                             meanWidth1, testMeansByCategory1[category][test], testStdErrsByCategory1[category][test],
+                             meanWidth2, testMeansByCategory2[category][test], testStdErrsByCategory2[category][test]));
         }
     }
 }
 
 initialize();
-computeItemTotals();
-computeTotals();
-computeMeans();
-computeStdDevs();
-computeStdErrors();
+
+computeItemTotals(output1, itemTotals1);
+computeItemTotals(output2, itemTotals2);
+
+total1 = computeTotals(output1, categoryTotals1, testTotalsByCategory1);
+total2 = computeTotals(output2, categoryTotals2, testTotalsByCategory2);
+
+mean1 = computeMeans(count1, total1, categoryTotals1, categoryMeans1, testTotalsByCategory1, testMeansByCategory1);
+mean2 = computeMeans(count2, total2, categoryTotals2, categoryMeans2, testTotalsByCategory2, testMeansByCategory2);
+
+stdDev1 = computeStdDevs(mean1, itemTotals1, categoryStdDevs1, categoryMeans1, testStdDevsByCategory1, testMeansByCategory1);
+stdDev2 = computeStdDevs(mean2, itemTotals2, categoryStdDevs2, categoryMeans2, testStdDevsByCategory2, testMeansByCategory2);
+
+stdErr1 = computeStdErrors(count1, stdDev1, categoryStdErrs1, categoryStdDevs1, testStdErrsByCategory1, testStdDevsByCategory1);
+stdErr2 = computeStdErrors(count2, stdDev2, categoryStdErrs2, categoryStdDevs2, testStdErrsByCategory2, testStdDevsByCategory2);
+
 printOutput();
