@@ -1,6 +1,16 @@
 2007-10-23  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Darin.
+        
+        - Add a compare script to compare results, and improve formatting of standard results a bit.
+
+        * resources/sunspider-analyze-results.js:
+        * resources/sunspider-compare-results.js: Added.
+        * sunspider-compare-results: Added.
+
+2007-10-23  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Darin.
 
         * resources/sunspider-analyze-results.js: Do the error range
         properly, using the t-distribution instead of 1.96 (which was
